# audioSystem

./: .gitignore  .gitmodules  CMAKE_BUILD.md  CMakeLists.txt  LICENSE  README.MD  README.md  build.sh  build_test.sh  config.xml  config_clean.xml  imgui.ini  output.elf  test_direct.cpp
.github/: copilot-instructions.md
cmake/: FindRtAudio.cmake  FindRtMidi.cmake
config/: CONFIG_README.md  config.xml  config_modern.xml  config_vintage.xml
embedded/: README.md  audio_task.c  audio_task.h  main.c
src/: AudioConfig.h  AudioGUI.cpp  AudioGUI.h  AudioSequencer.h  AudioSystemAdapter.cpp  AudioSystemAdapter.h  CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  IWave.h  MidiDevice.cpp  MidiDevice.h  audioDevice.cpp  audioDevice.h  audioSystem.cpp  audioSystem.h  main.cpp  main_gui.cpp  notes.h
src/Adapters/: AudioSystemAdapter.cpp  AudioSystemAdapter.h
src/Applications/: main_gui.cpp
src/Common/: notes.h
src/Config/: ConfigReader.h
src/Core/: AudioSequencer.cpp  AudioSequencer.h  audioDevice.cpp  audioDevice.h  audioSystem.cpp  audioSystem.h
src/Effects/: DelayEffect.cpp  DelayEffect.h  EffectParameters.h  IEffect.h  LowPassEffect.cpp  LowPassEffect.h  OctaveEffect.cpp  OctaveEffect.h
src/Envelope/: ADSREnvelope.cpp  ADSREnvelope.h
src/GUI/: AudioSystemManager.cpp  AudioSystemManager.h  ConfigurationManager.cpp  ConfigurationManager.h  EffectParameterWindow.cpp  EffectParameterWindow.h  GuiRenderers.cpp  GuiRenderers.h  SoundController.cpp  SoundController.h
src/Layout/: fluidApp.cpp  fluidApp.h  ui_mainwindow.h  untitled.ui
src/Midi/: MidiDevice.cpp  MidiDevice.h  MidiEvent.h
src/Waves/: IWave.h  SawtoothWave.cpp  SawtoothWave.h  SineWave.cpp  SineWave.h  SquareWave.cpp  SquareWave.h  TriangleWave.cpp  TriangleWave.h
